# tree-sitter-clingo

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  binding.gyp  changes.org  compile_commands.json  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  pyproject.toml~  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci-test.yml  publish.yml
bindings/c/: tree-sitter-clingo.pc.in
bindings/c/tree_sitter/: tree-sitter-clingo.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_clingo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  injections.scm  textobjects.scm
scripts/: bump.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: body-cst.txt  body.txt  head-cst.txt  head.txt  statements-cst.txt  statements.txt  terms-cst.txt  terms.txt  theory-cst.txt  theory.txt  type_comments.txt
test/highlight/: keywords.lp  test_highlights.lp
