[package]
name = "tree-sitter-clingo"
description = "Clingo grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "Clingo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sthiele/tree-sitter-clingo"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
