[package]
name = "tree-sitter-clingo"
version = "0.0.15-dev"
publish = true
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "Clingo grammar for the tree-sitter parsing library"
readme = "README.md"
keywords = ["incremental", "parsing", "Clingo"]
categories = ["parsing", "text-editors"]
documentation = "https://docs.rs/tree-sitter-clingo"
repository = "https://github.com/potassco/tree-sitter-clingo"
edition = "2018"
license = "MIT"
exclude = ["/.github"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24.4"

[build-dependencies]
cc = "1.0"
