[package]
name = "tree-sitter-clingo"
description = "Clingo grammar for tree-sitter"
version = "1.0.5"
authors = ["Roland Kaminski", "Sven Thiele"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "clingo"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/potassco/tree-sitter-clingo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
